welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:17: error: value baisseBrosse is not a member of Unit
if (isFacingTrail()==true){avance() baisseBrosse() leveBrosse();}else{droite();}
                                    ^